--- a/styles.css/style.css
+++ b/styles.css/style.css
@@ -28,3 +28,37 @@ nav ul {
 nav ul li {
   background-color: var(--backgroundnav);
 }
+nav ul li a {
+  display: block;
+  font-size: 18px;
+  color: var(--text);
+  text-transform: uppercase;
+  text-decoration: none;
+  font-family: "Bebas Neue", cursive;
+  padding: 13px;
+  margin-right: 1px;
+  background-color: var(--darkgrey);
+  text-align: center;
+}
+nav ul li:nth-of-type(2) a,
+li:nth-of-type(3) a,
+li:nth-of-type(4) a,
+li:nth-of-type(5) a,
+li:nth-of-type(6) a {
+  padding: 15px 13px;
+}
+
+nav ul li:nth-of-type(1) a {
+  color: var(--hover);
+}
+nav ul li:nth-of-type(7) a,
+li:nth-of-type(8) a,
+li:nth-of-type(9) a,
+li:nth-of-type(10) a {
+  color: var(--hover);
+  padding: 13px 14px 13px 0;
+  margin-right: 0;
+}
+nav ul li:nth-of-type(7) {
+  margin-left: auto;
+}
