--- a/styles.css/style.css
+++ b/styles.css/style.css
@@ -62,3 +62,13 @@ li:nth-of-type(10) a {
 nav ul li:nth-of-type(7) {
   margin-left: auto;
 }
+nav ul li a:hover {
+  color: var(--hover);
+}
+nav ul li:nth-of-type(1) a:hover,
+li:nth-of-type(7) a:hover,
+li:nth-of-type(8) a:hover,
+li:nth-of-type(9) a:hover,
+li:nth-of-type(10) a:hover {
+  color: var(--text);
+}
