--- a/styles.css/style.css
+++ b/styles.css/style.css
@@ -30,34 +30,31 @@ nav ul li {
 }
 nav ul li a {
   display: block;
-  font-size: 18px;
+  font-size: 19px;
+  height: 35px;
+  line-height: 35px;
   color: var(--text);
   text-transform: uppercase;
   text-decoration: none;
   font-family: "Bebas Neue", cursive;
-  padding: 13px;
+  padding: 3px 13px;
   margin-right: 1px;
   background-color: var(--darkgrey);
   text-align: center;
 }
-nav ul li:nth-of-type(2) a,
-li:nth-of-type(3) a,
-li:nth-of-type(4) a,
-li:nth-of-type(5) a,
-li:nth-of-type(6) a {
-  padding: 15px 13px;
-}
-
 nav ul li:nth-of-type(1) a {
   color: var(--hover);
+  padding-top: 6px;
 }
 nav ul li:nth-of-type(7) a,
 li:nth-of-type(8) a,
 li:nth-of-type(9) a,
 li:nth-of-type(10) a {
   color: var(--hover);
-  padding: 13px 14px 13px 0;
+  padding: 3px 10px 3px 0px;
+
   margin-right: 0;
+  font-size: 16px;
 }
 nav ul li:nth-of-type(7) {
   margin-left: auto;
