--- a/styles.css/style.css
+++ b/styles.css/style.css
@@ -19,6 +19,7 @@ main {
 nav {
   border-bottom: 1px solid var(--border);
   width: 100%;
+  max-width: 980px;
 }
 nav ul {
   display: flex;
@@ -37,10 +38,11 @@ nav ul li a {
   text-transform: uppercase;
   text-decoration: none;
   font-family: "Bebas Neue", cursive;
-  padding: 3px 13px;
+  padding: 3px 14px;
   margin-right: 1px;
   background-color: var(--darkgrey);
   text-align: center;
+  transition: all 300ms;
 }
 nav ul li:nth-of-type(1) a {
   color: var(--hover);
@@ -51,8 +53,7 @@ li:nth-of-type(8) a,
 li:nth-of-type(9) a,
 li:nth-of-type(10) a {
   color: var(--hover);
-  padding: 3px 10px 3px 0px;
-
+  padding: 3px 13px 3px 0px;
   margin-right: 0;
   font-size: 16px;
 }
